api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hangul-api
  labels:
    app: hangul-api
spec:
  selector:
    matchLabels:
      app: hangul-api
  template:
    metadata:
      name: hangul-api
      labels:
        app: hangul-api
    spec:
      containers:
      - name: hangul-api
        image: beekay24/hangul-api
        ports:
        - containerPort: 5250
---
apiVersion: v1
kind: Service
metadata:
  name: hangul-api
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5250
  selector:
    app: hangul-api
